<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="senac.tsi.eclairvinhos.LoginActivity" >

    <ImageView
        android:contentDescription="@string/dsc_logo"
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:src="@drawable/logo_eclair2" />

    <Button
        android:id="@+id/btn_cadastro"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_enviar"
        android:layout_below="@+id/btn_enviar"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_secondary"
        android:text="@string/btn_cadastrar" />

    <Button
        android:id="@+id/btn_depois"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btn_enviar"
        android:layout_alignTop="@+id/btn_cadastro"
        android:background="@drawable/button_secondary"
        android:text="@string/btn_logarDepois" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/senha"
        android:layout_below="@+id/senha"
        android:layout_marginTop="38dp"
        android:background="@drawable/button"
        android:text="@string/btn_entrar"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint = "@string/lblEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint = "@string/lblSenha"
        android:inputType="textPassword" />

</RelativeLayout>
